# valet

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  turbo.json
apps/app/: .env.example  README.md  package.json  tailwind.config.js  vite.config.ts
apps/app/src/: hooks.server.ts
apps/app/src/lib/: app.ts
apps/app/src/routes/: +error.svelte  (+3 more)
apps/extension/: .gitignore  README.md  manifest.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/extension/src/: App.svelte  app.pcss  index.html  main.ts
apps/ota-server/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/ota-server/src/: app.ts  crypto.ts  server.ts
apps/portal/: .env.example  README.md  package.json  vite.config.ts
apps/portal/src/: app.d.ts  app.pcss  hooks.server.ts
apps/www/: package.json  svelte.config.js
apps/www/src/: app.d.ts  hooks.server.ts
examples/demo/: .env.example  package.json
examples/demo/src/: hooks.server.ts
examples/nextjs/memo-finish/: .env.example  package.json
examples/nextjs/memo-starter/: package.json
examples/sveltekit/memo/: README.md  package.json  vite.config.ts
protocol/: package.json  tsconfig.json
protocol/programs/demo-program/: Cargo.toml
protocol/programs/demo-program/src/: lib.rs
protocol/programs/valet-protocol/: Cargo.toml
protocol/ts/src/: constants.ts  index.ts  tsconfig.json
protocol/ts/tests/: demo-program.ts  helpers.ts  mock-client.ts  mock-keypairs.ts  protocol.test.ts
(+197 files in other folders)
